--- a/src/App.css
+++ b/src/App.css
@@ -3,18 +3,13 @@ html{
     background-image: var(--bs-gradient);
 }
 body{
-  background-image: linear-gradient(to bottom,
-        rgba(243, 243, 238, 0.5),
-        rgba(138, 187, 237, 0.5)), url("coins.jpg");
+  background-image:  url("Italy.jpg");
 }
 .App {
   text-align: center;
  
 }
-div.container-fluid{
-  padding: 10;
-  margin: 10;
-}
+
 
 span.navbar-brand {
   font-family: cursive ;
@@ -26,20 +21,26 @@ span.navbar-brand {
 }
 
 div.container-fluid{
-  padding: 25;
+  padding: 5;
   margin: 0;
-  height:1400px;
+
 }
+div.app-user{
+  background-color: white;
+position: absolute;
+display: end;
+font: white;
+}
+
 div.footer.card{
-  width:auto;
-  margin-right: 50px;
+  display: flex;
+ 
+max-width: 100%vpw;
   border-style: ridge;
   border-width: 10px;
   border-color: black;
-  height: 175px;
-  background-image: linear-gradient(to bottom,
-        rgba(243, 243, 238, 0.7),
-        rgba(138, 187, 237, 0.7)), url("Benjamin.jpg");
+  height: 100px;
+  background-image:  url("Benjamin.jpg");
 }
 
 
