--- a/src/components/allData.css
+++ b/src/components/allData.css
@@ -9,10 +9,10 @@ p.user-data.card-text{
     max-width: fit-content;
 }
 thead{
-    position: relative;
-    padding: 5;
+    
+    padding: 10;
     margin: 10, 10;
-    display: inline-block;
+    display:flexbox;
     align-items: stretch;
     justify-items: auto;
     width: 1200px;
@@ -21,8 +21,8 @@ thead{
 tr{
     border-width: 10px;
     padding: 2rem;
-    margin: 100;
-    position: relative;
+    margin: 50;
+   
 }
 table.table{
     border-color: darkcyan;
@@ -30,5 +30,8 @@ table.table{
     width: 1200px;
     padding: 5;
     margin: 20;
-    position: relative;
+  
+}
+td{
+    justify-content: flex-start;
 }
