--- a/src/components/login.css
+++ b/src/components/login.css
@@ -3,6 +3,17 @@ div.login-card.card{
     position: relative;
     box-sizing: border-box;
     display: flex;
-    background-color: cadetblue;
-    padding: 25, 50;
+    background-color: rgb(59, 159, 212);
+   
+}
+
+form.login{
+    margin: 10;
+    padding: 10;
+}
+a{
+    margin-top: 25;
+    margin-bottom: 10;
+    display:flex;
+    flex-direction: column;
 }
