--- a/src/components/transactions.css
+++ b/src/components/transactions.css
@@ -1,10 +1,29 @@
 div.transactions.card{
-    background-color: bisque;
+    background-color: rgb(217, 215, 212);
     margin: 25;
     min-height: 1000px;
     min-width: 100%;
+    border-width: 10px;
+    padding: 25px
 
 }
 div.fluid.container{
     margin: 10;
+}
+form.activity{
+    max-width: 500px;
+    max-height: 300px;
+}
+button.btn.btn-primary{
+max-width: fit-content;
+}
+
+img.card-img-top.img{
+    max-width: 800px;
+    max-height: 200px;
+    margin: 20px;
+    position:relative;
+    display:flex;
+    border-width: 10px;
+    border-style: groove;
 }
